--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host galaxia-xplorers.netlify.app --port 443",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
